# fastapi-simple-authen-author-server

./: .env.example  .gitignore  README.md  pyproject.toml
doc/: architecture.txt  flow.md
docker/: .env.example  compose.yml
docker/postgres_bootstrap/: 02_create_db_users.sql
script/sql/: seed_data.sql
src/: __main__.py  config.py  initializer.py  main.py
src/admin/: bootstrap.py  cli.py  service.py
src/auth/: auth_module.py  doc.py
src/auth/dependency/: authentication.py  authorization.py
src/auth/dto/: auth_dto.py  token_payload.py
src/auth/endpoint/: auth_endpoint.py  main.py
src/auth/exception/: auth_exception.py
src/auth/repository/: permission_repository.py
src/auth/service/: auth_service.py  token_service.py
src/base/: app.py  dependency_injection.py  doc.py  engine_factory.py  initializer.py  module.py
src/base/dto/: main.py
src/base/middleware/: global_exception.py
src/base/router/: docs.py  health.py
src/book/: book_module.py  doc.py
src/book/dto/: book_dto.py
src/book/endpoint/: book_endpoint.py  main.py
src/book/service/: book_service.py
src/health/: doc.py  health_initializer.py  health_module.py
src/health/dto/: main.py
src/health/endpoint/: endpoint_health.py  main.py
src/health/service/: health_check.py
src/migration/migration/: env.py
src/permission/: doc.py  permission_module.py
src/permission/dto/: permission_dto.py
src/permission/endpoint/: main.py  permission_endpoint.py
src/permission/service/: permission_service.py
src/role/: doc.py  role_module.py
src/user/: doc.py  user_module.py
(+40 files in other folders)
